--- a/greeting.html
+++ b/greeting.html
@@ -105,7 +105,7 @@
     </ul>
     
     
-    <form action="/greeting" id="usrform" method="POST">
+    <form action="/contact" id="usrform" method="POST">
     Imię:
     <input type="text" name="usrname">
     <input type="submit">
